# F20DP-CWK1-OMP

./: CMakeLists.txt  Evaluate.py  Makefile  SumTot.c  para_benchmark.sh  seq_benchmark.sh  sum
Analysis/: Analysis.py  Evaluate.py  Runtime Table.xlsx
Analysis/Benchmarks/Seq/: seq_amd.csv  seq_intel.csv
